--- a/css/style.css
+++ b/css/style.css
@@ -150,4 +150,37 @@ input::placeholder {
 	border-left: 2px solid #ced4da;
 }
 
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?b5a9sr');
+  src:  url('../fonts/icomoon.eot?b5a9sr#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?b5a9sr') format('truetype'),
+    url('../fonts/icomoon.woff?b5a9sr') format('woff'),
+    url('../fonts/icomoon.svg?b5a9sr#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-phone:before {
+  content: "\e942";
+  font-size: 22px;
+  position: relative;
+  top: 2px;
+  left: -12px;
+}
 
